--- a/pages/index.html
+++ b/pages/index.html
@@ -21,5 +21,8 @@
             <a href="" class="btn">Mais informações</a>
         </div>
     </div>
+
+    <h2 class="hotel title">Escolha seu hotel</h2>
+    
 </body>
 </html>
