adicionando hotel no card

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,5 +24,16 @@
 
     <h2 class="hotel title">Escolha seu hotel</h2>
     
+    <div class="hotel-list"> 
+
+        <div class="hotel-item">
+            <img src="../images/img1.jpg" alt="image 1">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, praesentium? Id quidem molestiae, unde eius praesentium error velit voluptatum vero culpa, obcaecati temporibus tempora, fugiat nesciunt delectus molestias alias necessitatibus?</p>
+            <a href="" class="btn"> Fazer reserva </a>
+        </div>
+
+    </div>
+
 </body>
 </html>
