corrigindo erro ortográfico

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,16 +13,18 @@
     <!-- linkar o css -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
+
     <div class="hero" id="hero">
         <div class="hero-content">
             <h2>Sinta-se no paraíso</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae voluptate hic, id dolorem numquam quos! Ipsum iste ex, impedit recusandae sed eos accusamus nostrum fugiat maxime cum pariatur ullam!</p>
-            <a href="" class="btn">Mais informações</a>
+                <a href="" class="btn">Mais informações</a>
+            </div>
         </div>
-    </div>
 
-    <h2 class="hotel title">Escolha seu hotel</h2>
+    <h2 class="hotel-title">Escolha seu hotel</h2>
     
     <div class="hotel-list"> 
 
