--- a/pages/index.html
+++ b/pages/index.html
@@ -29,8 +29,33 @@
     <div class="hotel-list"> 
 
         <div class="hotel-item">
-            <img src="../images/img1.jpg" alt="image 1">
-            <h3>Lorem ipsum</h3>
+            <img src="../images/img1.png" alt="image 1">
+            <h3>Magna Praia Hotel</h3>
+            <p> Fortaleza </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, praesentium? Id quidem molestiae, unde eius praesentium error velit voluptatum vero culpa, obcaecati temporibus tempora, fugiat nesciunt delectus molestias alias necessitatibus?</p>
+            <a href="" class="btn"> Fazer reserva </a>
+        </div>
+
+        <div class="hotel-item">
+            <img src="../images/img2.png" alt="image 2">
+            <h3>Hotel Jangadeiro</h3>
+            <p>Recife</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, praesentium? Id quidem molestiae, unde eius praesentium error velit voluptatum vero culpa, obcaecati temporibus tempora, fugiat nesciunt delectus molestias alias necessitatibus?</p>
+            <a href="" class="btn"> Fazer reserva </a>
+        </div>
+
+        <div class="hotel-item">
+            <img src="../images/img3.png" alt="image 3">
+            <h3>Villa da Praia Hotel</h3>
+            <p>Salvador</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, praesentium? Id quidem molestiae, unde eius praesentium error velit voluptatum vero culpa, obcaecati temporibus tempora, fugiat nesciunt delectus molestias alias necessitatibus?</p>
+            <a href="" class="btn"> Fazer reserva </a>
+        </div>
+
+        <div class="hotel-item">
+            <img src="../images/img3.png" alt="image 3">
+            <h3>Villa da Praia Hotel</h3>
+            <p>Salvador</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, praesentium? Id quidem molestiae, unde eius praesentium error velit voluptatum vero culpa, obcaecati temporibus tempora, fugiat nesciunt delectus molestias alias necessitatibus?</p>
             <a href="" class="btn"> Fazer reserva </a>
         </div>
